Fixes overflow of <pre> on small screens

--- a/assets/css/main.css
+++ b/assets/css/main.css
@@ -201,6 +201,7 @@ nav a {
 
 #post pre {
   padding: 1rem;
+  overflow-x: auto;
 }
 
 /* Media queries */
